--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,15 @@
       gap: 8px;
 }
 .heart {
-  height: 24px;
-  width: 24px;
+  height: 30px;
+  width: 30px;
   color: #1AB570;
-  z-index: 1;
   position: absolute;
 }
 .heart-fill {
   color: #90E5A2;
-  height: 24px;
-  width: 24px;
+  height: 30px;
+  width: 30px;
 }
 .div-heart {
   display: flex;
@@ -38,6 +37,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 @keyframes toggle {
   0% {transform: translate(-18%,-21%);margin-top: -4px; margin-bottom: -4px;}
@@ -48,6 +48,29 @@
   animation-name: toggle;
   animation-duration: 0.3s;
 }
+@keyframes bounceIn {
+  0% { transform: scale(0.5); opacity: 0; }
+  60% { transform: scale(1.1); opacity: 1; }
+  80% { transform: scale(0.95); }
+  100% { transform: scale(1); }
+}
+
+@keyframes bounceOut {
+  0% {transform: translate(-18%,-21%);margin-top: -4px; margin-left: 0;}
+  50% {transform: translate(-4%,-4%); margin-top: 4px; margin-left: 4px;}
+  100% {transform: translate(0%,-0%); margin-top: 0; margin-left: 8px; opacity: 0;}
+}
+
+.bounce-in {
+  animation: bounceIn 0.5s forwards;
+}
+
+.bounce-out {
+  z-index: 0;
+  position: relative;
+  animation: bounceOut 0.3s forwards;
+}
+
 
 @keyframes floating {
   0% {
@@ -70,9 +93,12 @@
   text-align: center;
   position: absolute;
   margin-left: -3.2%;
+  box-shadow: 0px 4px 8px 0px #00000033;
+  ;
 }
 .client {
   font-size: 12px;
+  color: #383838;
 }
 .star {
   color: #1AB570;
