--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,13 @@
   justify-content: center;
   align-items: center;
   z-index: 5;
+  background-color: white;
 }
 @keyframes toggle {
-  0% {transform: translate(-18%,-21%);margin-top: -4px; margin-bottom: -4px;}
-  50% {transform: translate(-4%,-4%); margin-top: 4px; margin-bottom: 4px;}
-  100% {transform: translate(0%,-0%); margin-top: 0; margin-bottom: 0;}
+  0% { transform: scale(0.5); opacity: 0; }
+  60% { transform: scale(1.1); opacity: 1; }
+  80% { transform: scale(0.95); }
+  100% { transform: scale(1); }
 }
 .animate {
   animation-name: toggle;
@@ -56,8 +58,8 @@
 }
 
 @keyframes bounceOut {
-  0% {transform: translate(-18%,-21%);margin-top: -4px; margin-left: 0;}
-  50% {transform: translate(-4%,-4%); margin-top: 4px; margin-left: 4px;}
+  0% {margin-top: -4px; margin-left: 0;}
+  50% {margin-top: 4px; margin-left: 4px; opacity: 0.8}
   100% {transform: translate(0%,-0%); margin-top: 0; margin-left: 8px; opacity: 0;}
 }
 
@@ -66,7 +68,7 @@
 }
 
 .bounce-out {
-  z-index: 0;
+  z-index: -1;
   position: relative;
   animation: bounceOut 0.3s forwards;
 }
@@ -93,6 +95,7 @@
   text-align: center;
   position: absolute;
   margin-left: -3.2%;
+  z-index: 2;
   box-shadow: 0px 4px 8px 0px #00000033;
   ;
 }
